@startuml

title __UI's Class Diagram__\n

  namespace com.gmail.ib.projectCrypt {
    namespace ui {
      class ConfirmDialog {
          + ConfirmDialog()
      }
    }
  }
  

  namespace com.gmail.ib.projectCrypt {
    namespace ui {
      class ErrorView {
          - explanation : Span
          + ErrorView()
          + setErrorParameter()
      }
    }
  }
  

  namespace com.gmail.ib.projectCrypt {
    namespace ui {
      class MainLayout {
          - logoutButton : Button
          + MainLayout()
          # onAttach()
          - createMenuButton()
          - createMenuLink()
          - logout()
      }
    }
  }
  

  ConfirmDialog -up-|> com.vaadin.flow.component.dialog.Dialog
  ErrorView .up.|> com.vaadin.flow.router.HasErrorParameter
  ErrorView -up-|> com.vaadin.flow.component.orderedlayout.VerticalLayout
  MainLayout .up.|> com.vaadin.flow.router.RouterLayout
  MainLayout -up-|> com.vaadin.flow.component.applayout.AppLayout


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
